<?xml version="1.0"?>
<package>
  <name>lepton_camera</name>
  <version>0.1.0</version>
  <description>
    ROS driver for FLIR Lepton camera(s) using spidev and i2c-dev
  </description>
  <maintainer email="riesen@unlv.nevada.edu">Joseph Riesen</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/UNLV-ISCL/UNLV-UAV-Controls</url>
  <!--<author email="riesen@unlv.nevada.edu">Joseph Riesen</author>-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
